--- a/LITRevu/reviews/templates/review_form.html
+++ b/LITRevu/reviews/templates/review_form.html
@@ -6,7 +6,12 @@
 <link rel="stylesheet" href="{% static 'css/reviews_styles.css' %}">
 {% endblock %}
 {% block content_title %}
-{% if form.instance.pk %}<i class="icon-pencil"></i><i class="icon-newspaper"></i>{% else %}<i class="icon-plus"></i><i class="icon-newspaper">{% endif %} Review
+{% if form.instance.pk %}
+<span class="icon-hover-box"><i class="icon-pencil"></i><i class="icon-newspaper"></i></span>
+{% else %}
+<span class="icon-hover-box"><i class="icon-plus"></i><i class="icon-newspaper"></span>
+{% endif %} 
+Review
 {% endblock %}
 
 {% block content %}
@@ -59,7 +64,7 @@
         {{ form.tags }}
         {{ form.tags.errors }}
     </div>
-    <button type="submit"><i class="icon-checkmark"></i></button>
+    <button type="submit" class="icon-hover-box"><i class="icon-checkmark"></i></button>
 </form>
-<a href="{% url 'review_list' ticket.pk %}"><i class="icon-arrow-left2"></i><i class="icon-file-text"></i></a>
+<a href="{% url 'review_list' ticket.pk %}" class="icon-hover-box"><i class="icon-arrow-left2"></i><i class="icon-file-text"></i></a>
 {% endblock %}
