--- a/LITRevu/users/templates/login.html
+++ b/LITRevu/users/templates/login.html
@@ -28,6 +28,6 @@ Login
         {% if form.non_field_errors %}
             <div class="error">{{ form.non_field_errors }}</div>
         {% endif %}
-        <button type="submit"><i class="icon-checkmark"></i></button>
+        <button type="submit" class="icon-hover-box"><i class="icon-checkmark"></i></button>
     </form>
 {% endblock %}
