--- a/LITRevu/users/templates/user_detail.html
+++ b/LITRevu/users/templates/user_detail.html
@@ -12,7 +12,7 @@
 <p>Email: {{ user.email }}</p>
 {% if user != request.user %}
     <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
-    <button class="follow-btn" data-user-id="{{ user.pk }}" data-url="{% url 'toggle_follow' user.pk %}">
+    <button class="follow-btn icon-hover-box" data-user-id="{{ user.pk }}" data-url="{% url 'toggle_follow' user.pk %}">
         {% if user.is_followed_by_current_user %}
             <i class="icon-user-minus"></i>
         {% else %}
@@ -32,7 +32,7 @@ People {{ user.username }} follows
 <li>
     <a href="{% url 'user_detail' user.pk %}">{{ user.username }}</a>
     <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
-    <button class="follow-btn" data-user-id="{{ user.pk }}" data-url="{% url 'toggle_follow' user.pk %}">
+    <button class="follow-btn icon-hover-box" data-user-id="{{ user.pk }}" data-url="{% url 'toggle_follow' user.pk %}">
         {% if user.followers_status %}
             <i class="icon-user-minus"></i>
         {% else %}
