--- a/LITRevu/app/static/css/styles.css
+++ b/LITRevu/app/static/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Garamond", "Times New Roman", Times, serif;
+    font-family: 'Quicksand', sans-serif, 'Roboto Mono', monospace, 'Courier New', Courier, 'Comfortaa', sans-serif, "Times New Roman", Times, serif;
     background-color: #ff71ff;
     background-image: url('../images/library illustration.jpg');
     background-blend-mode: luminosity;
@@ -45,7 +45,7 @@ form {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: calc(100vh - 71px);
+    min-height: calc(100vh - 73px);
 }
 
 .main-title {
@@ -100,36 +100,25 @@ form {
     display: none;
     position: fixed;
     z-index: 1;
-    padding-top: 60px;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
-}
-
-.modal-content {
-    background-color: #fefefe;
-    margin: 5% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
+    background-color: rgba(0,0,0,0.7);
+    backdrop-filter: blur(3px);
 }
 
 .close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+    position: absolute;
+    top: 8px;
+    right: 4px;
 }
 
 .close:hover,
 .close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
+    color: rgb(252, 152, 152);
+    transform: scale(1.2);
 }
 
 footer {
@@ -166,7 +155,12 @@ footer p {
     margin-top: 40px;
 }
 
+.margin-auto {
+    margin: auto;
+}
+
 .page {
+    position: relative;
     flex: 1;
     padding: 16px;
     box-sizing: border-box;
@@ -217,6 +211,10 @@ footer p {
     left: 0;
 }
 
+.icon-hover-box:hover {
+    cursor: pointer;
+}
+
 .icon-user-minus,
 .icon-heart,
 .icon-warning,
@@ -226,18 +224,12 @@ footer p {
     color: rgb(199, 87, 87);
 }
 
-button:hover .icon-user-minus,
-button:hover .icon-heart,
-button:hover .icon-warning,
-button:hover .icon-cross,
-button:hover .icon-bin,
-button:hover .icon-lock,
-a:hover .icon-user-minus,
-a:hover .icon-heart,
-a:hover .icon-warning,
-a:hover .icon-cross,
-a:hover .icon-bin,
-a:hover .icon-lock {
+.icon-hover-box:hover .icon-user-minus,
+.icon-hover-box:hover .icon-heart,
+.icon-hover-box:hover .icon-warning,
+.icon-hover-box:hover .icon-cross,
+.icon-hover-box:hover .icon-bin,
+.icon-hover-box:hover .icon-lock {
     color: rgb(252, 152, 152);
     transform: scale(1.2);
 }
@@ -247,10 +239,8 @@ a:hover .icon-lock {
     color: rgb(94, 165, 94);
 }
 
-button:hover .icon-user-plus,
-button:hover .icon-checkmark,
-a:hover .icon-user-plus,
-a:hover .icon-checkmark {
+.icon-hover-box:hover .icon-user-plus,
+.icon-hover-box:hover .icon-checkmark {
     color: rgb(160, 236, 160);
     transform: scale(1.2);
 }
@@ -259,8 +249,7 @@ a:hover .icon-checkmark {
     color: rgb(150, 107, 161);
 }
 
-button:hover .icon-heart-broken,
-a:hover .icon-heart-broken {
+.icon-hover-box:hover .icon-heart-broken {
     color: rgb(219, 182, 228);
     transform: scale(1.2);
 }
@@ -270,10 +259,8 @@ a:hover .icon-heart-broken {
     color: rgb(199, 147, 80);
 }
 
-button:hover .icon-notification,
-button:hover .icon-pencil,
-a:hover .icon-notification,
-a:hover .icon-pencil {
+.icon-hover-box:hover .icon-notification,
+.icon-hover-box:hover .icon-pencil {
     color: rgb(233, 185, 123);
     transform: scale(1.2);
 }
@@ -286,16 +273,11 @@ a:hover .icon-pencil {
     color: rgb(112, 147, 192);
 }
 
-button:hover .icon-eye-plus,
-button:hover .icon-plus,
-button:hover .icon-pen,
-button:hover .icon-arrow-left2,
-button:hover .icon-file-text,
-a:hover .icon-eye-plus,
-a:hover .icon-plus,
-a:hover .icon-pen,
-a:hover .icon-arrow-left2,
-a:hover .icon-file-text {
+.icon-hover-box:hover .icon-eye-plus,
+.icon-hover-box:hover .icon-plus,
+.icon-hover-box:hover .icon-pen,
+.icon-hover-box:hover .icon-arrow-left2,
+.icon-hover-box:hover .icon-file-text {
     color: rgb(184, 215, 255);
     transform: scale(1.2);
 }
