--- a/LITRevu/tickets/templates/ticket_list.html
+++ b/LITRevu/tickets/templates/ticket_list.html
@@ -10,7 +10,7 @@ Tickets
 {% endblock %}
 {% block content %}
 {% if request.user.is_authenticated %}
-  <a href="{% url 'ticket_form' %}"><i class="icon-plus"></i><i class="icon-pen"></i></a>
+  <a href="{% url 'ticket_form' %}" class="icon-hover-box"><i class="icon-plus"></i><i class="icon-pen"></i></a>
   <ul>
     {% for ticket in tickets %}
     {% if not ticket.is_archived %}
@@ -19,17 +19,17 @@ Tickets
           <h3 class="aligned">
             {{ ticket.title }}
             {% if request.user == ticket.author or request.user.is_superuser %}
-              <a href="{% url 'ticket_update' ticket.pk %}"><i class="icon-pencil"></i></a>
-              <a href="#" id="delete-ticket-btn" data-ticket-id="{{ ticket.pk }}"><i class="icon-bin"></i></a>
+              <a href="{% url 'ticket_update' ticket.pk %}" class="icon-hover-box"><i class="icon-pencil"></i></a>
+              <a href="#" id="delete-ticket-btn" data-ticket-id="{{ ticket.pk }}" class="icon-hover-box"><i class="icon-bin"></i></a>
             {% endif %}
           </h3>
           <p>{{ ticket.description }}</p>
           <p>Created at: {{ ticket.created_at }}</p>
           <div>
             <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
-            <button class="like-btn" data-ticket-id="{{ ticket.pk }}" data-ticket-url="{% url 'ticket_like' ticket.pk %}"><i class="icon-heart"></i></button>
+            <button class="like-btn icon-hover-box" data-ticket-id="{{ ticket.pk }}" data-ticket-url="{% url 'ticket_like' ticket.pk %}"><i class="icon-heart"></i></button>
             <span class="likes-count" data-ticket-id="{{ ticket.pk }}">{{ ticket.likes_count }}</span>
-            <button class="dislike-btn" data-ticket-id="{{ ticket.pk }}" data-ticket-url="{% url 'ticket_dislike' ticket.pk %}"><i class="icon-heart-broken"></i></button>
+            <button class="dislike-btn icon-hover-box" data-ticket-id="{{ ticket.pk }}" data-ticket-url="{% url 'ticket_dislike' ticket.pk %}"><i class="icon-heart-broken"></i></button>
             <span class="dislikes-count" data-ticket-id="{{ ticket.pk }}">{{ ticket.dislikes_count }}</span>
         </a>
         </div>
@@ -37,7 +37,7 @@ Tickets
           {% for review in ticket.reviews.all %}
           {% if not review.is_archived %}
             <li>
-              <a href="{% url 'review_detail' review.pk %}" class="aligned"><h4>{{ review.title }}</h4><i class="icon-eye-plus"></i></a>
+              <a href="{% url 'review_detail' review.pk %}" class="aligned icon-hover-box"><h4>{{ review.title }}</h4><i class="icon-eye-plus"></i></a>
               <p>{{ review.content }}</p>
             </li>
           {% endif %}
@@ -55,7 +55,7 @@ Tickets you might like
 {% endblock %}
 {% block second_page_content %}
 {% if request.user.is_authenticated %}
-  <a href="{% url 'ticket_form' %}"><i class="icon-plus"></i><i class="icon-pen"></i></a>
+  <a href="{% url 'ticket_form' %}" class="icon-hover-box"><i class="icon-plus"></i><i class="icon-pen"></i></a>
   <ul>
     {% for ticket in tickets %}
     {% if not ticket.is_archived %}
@@ -64,17 +64,17 @@ Tickets you might like
           <h3 class="aligned">
             {{ ticket.title }}
             {% if request.user == ticket.author or request.user.is_superuser %}
-              <a href="{% url 'ticket_update' ticket.pk %}"><i class="icon-pencil"></i></a>
-              <a href="#" id="delete-ticket-btn" data-ticket-id="{{ ticket.pk }}"><i class="icon-bin"></i></a>
+              <a href="{% url 'ticket_update' ticket.pk %}" class="icon-hover-box"><i class="icon-pencil"></i></a>
+              <a href="#" id="delete-ticket-btn" data-ticket-id="{{ ticket.pk }}" class="icon-hover-box"><i class="icon-bin"></i></a>
             {% endif %}
           </h3>
           <p>{{ ticket.description }}</p>
           <p>Created at: {{ ticket.created_at }}</p>
           <div>
             <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
-            <button class="like-btn" data-ticket-id="{{ ticket.pk }}" data-ticket-url="{% url 'ticket_like' ticket.pk %}"><i class="icon-heart"></i></button>
+            <button class="like-btn icon-hover-box" data-ticket-id="{{ ticket.pk }}" data-ticket-url="{% url 'ticket_like' ticket.pk %}"><i class="icon-heart"></i></button>
             <span class="likes-count" data-ticket-id="{{ ticket.pk }}">{{ ticket.likes_count }}</span>
-            <button class="dislike-btn" data-ticket-id="{{ ticket.pk }}" data-ticket-url="{% url 'ticket_dislike' ticket.pk %}"><i class="icon-heart-broken"></i></button>
+            <button class="dislike-btn icon-hover-box" data-ticket-id="{{ ticket.pk }}" data-ticket-url="{% url 'ticket_dislike' ticket.pk %}"><i class="icon-heart-broken"></i></button>
             <span class="dislikes-count" data-ticket-id="{{ ticket.pk }}">{{ ticket.dislikes_count }}</span>
         </a>
         </div>
@@ -82,7 +82,7 @@ Tickets you might like
           {% for review in ticket.reviews.all %}
           {% if not review.is_archived %}
             <li>
-              <a href="{% url 'review_detail' review.pk %}" class="aligned"><h4>{{ review.title }}</h4><i class="icon-eye-plus"></i></a>
+              <a href="{% url 'review_detail' review.pk %}" class="aligned icon-hover-box"><h4>{{ review.title }}</h4><i class="icon-eye-plus"></i></a>
               <p>{{ review.content }}</p>
             </li>
           {% endif %}
@@ -103,7 +103,7 @@ Tickets you might like
       <p>Are you sure you want to delete this ticket?</p>
       <form id="delete-ticket-form">
           <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
-          <button type="submit"><i class="icon-bin"></i></button>
+          <button type="submit" class="icon-hover-box"><i class="icon-bin"></i></button>
       </form>
   </div>
 </div>
