--- a/LITRevu/users/templates/register.html
+++ b/LITRevu/users/templates/register.html
@@ -46,8 +46,7 @@ User Registration
                 <div class="error">{{ form.date_of_birth.errors }}</div>
             {% endif %}
         </div> {% endcomment %}
-
-        <input type="submit" value="Register">
+        <button type="submit" class="icon-hover-box"><i class="icon-checkmark"></i></button>
     </form>
 {% endblock %}
 {% block js %}
