--- a/LITRevu/app/static/css/styles.css
+++ b/LITRevu/app/static/css/styles.css
@@ -45,7 +45,7 @@ form {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: calc(100vh - 73px);
+    min-height: 100vh;
 }
 
 .main-title {
@@ -58,10 +58,15 @@ form {
 }
 
 .naviagtion-menu {
+    position: fixed;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: calc(100vw - 48px);
     margin: 0;
     padding: 24px;
     gap: 40px;
@@ -141,6 +146,13 @@ footer p {
     align-items: center;
 }
 
+.aligned-centered {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
 .notepad {
     display: flex;
     position: relative;
@@ -152,7 +164,7 @@ footer p {
     max-width: 80vw;
     margin: auto;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-top: 40px;
+    margin-top: 100px;
 }
 
 .margin-auto {
