--- a/LITRevu/tickets/templates/ticket_list.html
+++ b/LITRevu/tickets/templates/ticket_list.html
@@ -9,106 +9,79 @@
 Tickets
 {% endblock %}
 {% block content %}
-{% if request.user.is_authenticated %}
-  <a href="{% url 'ticket_form' %}" class="icon-hover-box"><i class="icon-plus"></i><i class="icon-pen"></i></a>
-  <ul>
-    {% for ticket in tickets %}
-    {% if not ticket.is_archived %}
-    <li>
-        <a href="{% url 'review_list' ticket.pk %}">
-          <h3 class="aligned">
-            {{ ticket.title }}
-            {% if request.user == ticket.author or request.user.is_superuser %}
-              <a href="{% url 'ticket_update' ticket.pk %}" class="icon-hover-box"><i class="icon-pencil"></i></a>
-              <a href="#" id="delete-ticket-btn" data-ticket-id="{{ ticket.pk }}" class="icon-hover-box"><i class="icon-bin"></i></a>
-            {% endif %}
-          </h3>
-          <p>{{ ticket.description }}</p>
-          <p>Created at: {{ ticket.created_at }}</p>
-          <div>
-            <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
-            <button class="like-btn icon-hover-box" data-ticket-id="{{ ticket.pk }}" data-ticket-url="{% url 'ticket_like' ticket.pk %}"><i class="icon-heart"></i></button>
-            <span class="likes-count" data-ticket-id="{{ ticket.pk }}">{{ ticket.likes_count }}</span>
-            <button class="dislike-btn icon-hover-box" data-ticket-id="{{ ticket.pk }}" data-ticket-url="{% url 'ticket_dislike' ticket.pk %}"><i class="icon-heart-broken"></i></button>
-            <span class="dislikes-count" data-ticket-id="{{ ticket.pk }}">{{ ticket.dislikes_count }}</span>
-        </a>
-        </div>
-        <ul>
-          {% for review in ticket.reviews.all %}
-          {% if not review.is_archived %}
-            <li>
-              <a href="{% url 'review_detail' review.pk %}" class="aligned icon-hover-box"><h4>{{ review.title }}</h4><i class="icon-eye-plus"></i></a>
-              <p>{{ review.content }}</p>
-            </li>
-          {% endif %}
-          {% endfor %}
-        </ul>
-      </li>
-    {% endif %}
-    {% endfor %}
-  </ul>
-{% endif %}
 {% endblock %}
 
 {% block second_page_title %}
 Tickets you might like
 {% endblock %}
 {% block second_page_content %}
-{% if request.user.is_authenticated %}
-  <a href="{% url 'ticket_form' %}" class="icon-hover-box"><i class="icon-plus"></i><i class="icon-pen"></i></a>
-  <ul>
-    {% for ticket in tickets %}
-    {% if not ticket.is_archived %}
-    <li>
-        <a href="{% url 'review_list' ticket.pk %}">
+  {% if request.user.is_authenticated %}
+    <a href="{% url 'ticket_form' %}" class="icon-hover-box"><i class="icon-plus"></i><i class="icon-pen"></i></a>
+    <ul>
+      {% for ticket in tickets %}
+        {% if not ticket.is_archived %}
+        <li id="ticket-{{ ticket.pk }}">
           <h3 class="aligned">
-            {{ ticket.title }}
+          <a href="{% url 'review_list' ticket.pk %}">{{ ticket.title }}</a>
             {% if request.user == ticket.author or request.user.is_superuser %}
-              <a href="{% url 'ticket_update' ticket.pk %}" class="icon-hover-box"><i class="icon-pencil"></i></a>
-              <a href="#" id="delete-ticket-btn" data-ticket-id="{{ ticket.pk }}" class="icon-hover-box"><i class="icon-bin"></i></a>
+              <button type="button" id="edit-ticket-btn" data-ticket-id="{{ ticket.pk }}" class="icon-hover-box"><i class="icon-pencil"></i></button>
+              <form id="deleteTicketForm" method="post" action="{% url 'ticket_delete' ticket.pk %}">
+                {% csrf_token %}
+                <button type="button" id="delete-ticket-btn" name="delete-ticket" class="ticket-delete-btn icon-hover-box" data-item-name="{{ ticket.title }}"><i class="icon-bin"></i></button>
+              </form>
             {% endif %}
           </h3>
-          <p>{{ ticket.description }}</p>
-          <p>Created at: {{ ticket.created_at }}</p>
+          <a href="{% url 'review_list' ticket.pk %}"><p>{{ ticket.description }}</p></a>
+          <p>Created at: {{ ticket.created_at|date:"F j, Y" }} by {{ ticket.author }}</p>
           <div>
             <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
-            <button class="like-btn icon-hover-box" data-ticket-id="{{ ticket.pk }}" data-ticket-url="{% url 'ticket_like' ticket.pk %}"><i class="icon-heart"></i></button>
-            <span class="likes-count" data-ticket-id="{{ ticket.pk }}">{{ ticket.likes_count }}</span>
-            <button class="dislike-btn icon-hover-box" data-ticket-id="{{ ticket.pk }}" data-ticket-url="{% url 'ticket_dislike' ticket.pk %}"><i class="icon-heart-broken"></i></button>
-            <span class="dislikes-count" data-ticket-id="{{ ticket.pk }}">{{ ticket.dislikes_count }}</span>
-        </a>
-        </div>
-        <ul>
-          {% for review in ticket.reviews.all %}
-          {% if not review.is_archived %}
-            <li>
-              <a href="{% url 'review_detail' review.pk %}" class="aligned icon-hover-box"><h4>{{ review.title }}</h4><i class="icon-eye-plus"></i></a>
-              <p>{{ review.content }}</p>
-            </li>
-          {% endif %}
-          {% endfor %}
-        </ul>
-      </li>
-    {% endif %}
-    {% endfor %}
-  </ul>
-{% endif %}
+            <form id="like-form-{{ ticket.pk }}" method="post" action="{% url 'ticket_like' ticket.pk %}" class"aligned">
+              {% csrf_token %}
+              <button class="like-btn icon-hover-box"><i class="icon-heart"></i></button>
+              <span class="likes-count">{{ ticket.likes_count }}</span>
+            </form>
+            <form id="dislike-form-{{ ticket.pk }}" method="post" action="{% url 'ticket_dislike' ticket.pk %}" class"aligned">
+              {% csrf_token %}
+              <button class="dislike-btn icon-hover-box"><i class="icon-heart-broken"></i></button>
+              <span class="dislikes-count">{{ ticket.dislikes_count }}</span>
+            </form>
+          </div>
+          <ul>
+            {% for review in ticket.reviews.all %}
+              {% if not review.is_archived %}
+                <li>
+                  <a href="{% url 'review_detail' review.pk %}" class="aligned icon-hover-box"><h4>{{ review.title }}</h4><i class="icon-eye-plus"></i></a>
+                  <p>{{ review.content }}</p>
+                </li>
+              {% endif %}
+            {% endfor %}
+          </ul>
+        </li>
+        {% endif %}
+      {% endfor %}
+    </ul>
+  {% endif %}
 {% endblock %}
 
 {% block modals %}
-<div id="delete-ticket-modal" class="modal">
-  <div class="modal-content">
-      <span class="close">&times;</span>
-      <h2>Delete Ticket</h2>
-      <p>Are you sure you want to delete this ticket?</p>
-      <form id="delete-ticket-form">
-          <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
-          <button type="submit" class="icon-hover-box"><i class="icon-bin"></i></button>
-      </form>
+<div id="deleteTicketModal" class="modal">
+  <div class="notepad margin-auto">
+      <div class="page right">
+          <div class="page-content">
+              <h2 class="main-title">Are you sure you want to delete "<span id="itemName">"</span>?</h2>
+              <div class="aligned-centered">
+                <button class="icon-hover-box" id="deleteTicketModalCancelBtn"><i class="icon-blocked"></i></button>
+                <button class="icon-hover-box" id="deleteTicketModalConfirmBtn"><i class="icon-bin"></i></button>
+              </div>
+          </div>
+          <i class="icon-cross close icon-hover-box" id="deleteTicketModalCloseBtn"></i>
+      </div>
+      <div class="spiral single-page-spiral"></div>
   </div>
 </div>
 {% endblock %}
 
 {% block js %}
+<script src="{% static 'js/modal_ajax_query.js' %}"></script>
 <script src="{% static 'js/tickets_script.js' %}"></script>
 {% endblock%}
