--- a/LITRevu/app/templates/base_template.html
+++ b/LITRevu/app/templates/base_template.html
@@ -40,7 +40,7 @@
         </ul>
     </nav>
 </header>
-
+<div class="background"></div>
 <div class="main-layout">
     {% if messages %}
         <ul class="messages">
