--- a/LITRevu/reviews/templates/review_form.html
+++ b/LITRevu/reviews/templates/review_form.html
@@ -65,7 +65,7 @@ Review
         {{ form.tags }}
         {{ form.tags.errors }}
     </div>
-    <button type="submit" class="icon-hover-box"><i class="icon-checkmark"></i></button>
+    <button type="submit" class="icon-hover-box feedback validation-btn"><i class="icon-checkmark"></i></button>
 </form>
 <a href="{% url 'review_list' ticket.pk %}" class="icon-hover-box"><i class="icon-arrow-left2"></i><i class="icon-file-text"></i></a>
 {% endblock %}
