--- a/LITRevu/users/templates/register.html
+++ b/LITRevu/users/templates/register.html
@@ -46,7 +46,7 @@ User Registration
                 <div class="error">{{ form.date_of_birth.errors }}</div>
             {% endif %}
         </div> {% endcomment %}
-        <button type="submit" class="icon-hover-box"><i class="icon-checkmark"></i></button>
+        <button type="submit" class="icon-hover-box feedback validation-btn"><i class="icon-checkmark"></i></button>
     </form>
 {% endblock %}
 {% block js %}
