--- a/LITRevu/tickets/templates/ticket_confirm_delete.html
+++ b/LITRevu/tickets/templates/ticket_confirm_delete.html
@@ -11,7 +11,7 @@
 <p>Are you sure you want to delete "{{ ticket.title }}"?</p>
 <form method="post">
     {% csrf_token %}
-    <button type="submit" class="icon-hover-box"><i class="icon-checkmark"></i></button>
+    <button type="submit" class="icon-hover-box feedback validation-btn"><i class="icon-checkmark"></i></button>
 </form>
 <a href="{% url 'ticket_list' %}" class="icon-hover-box"><i class="icon-cross"></i></a>
 {% endblock %}
