--- a/LITRevu/tickets/templates/ticket_form.html
+++ b/LITRevu/tickets/templates/ticket_form.html
@@ -68,7 +68,7 @@ Create Ticket
         {% endif %}
       </div>
     </div>
-    <button type="submit" class="icon-hover-box"><i class="icon-checkmark"></i></button>
+    <button type="submit" class="icon-hover-box feedback validation-btn"><i class="icon-checkmark"></i></button>
   </form>
 {% endblock %}
 
